--- a/index.html
+++ b/index.html
@@ -71,46 +71,48 @@
         </p>
         <p>
           Instagram:
-          <a href="https://instagram.com/username" target="_blank">@username</a>
+          <a href="https://instagram.com/christian_lahimade" target="_blank">@christian_lahimade</a>
         </p>
       </div>
     </section>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const sections = document.querySelectorAll(".section");
-        let currentIndex = 0;
-        let isScrolling = false;
-
-        function scrollToSection(index) {
-          if (index < 0 || index >= sections.length) return;
-          isScrolling = true;
-          sections[index].scrollIntoView({
+    document.addEventListener("DOMContentLoaded", function () {
+    const sections = document.querySelectorAll(".section");
+    let currentIndex = 0;
+    let isScrolling = false;
+    
+    function scrollToSection(index) {
+        if (index < 0 || index >= sections.length) return;
+        isScrolling = true;
+        sections[index].scrollIntoView({
             behavior: "smooth",
-            block: "center",
-          });
-          currentIndex = index;
-          window.history.pushState(null, "", `#${sections[index].id}`);
-          setTimeout(() => (isScrolling = false), 500);
+            block: "center"
+        });
+        currentIndex = index;
+        window.history.pushState(null, "", `#${sections[index].id}`);
+        setTimeout(() => isScrolling = false, 800);
+    }
+
+    let scrollTimeout;
+    window.addEventListener("wheel", (event) => {
+        if (isScrolling) return;
+        clearTimeout(scrollTimeout);
+        scrollTimeout = setTimeout(() => {
+            if (event.deltaY > 0) {
+                scrollToSection(currentIndex + 1);
+            } else {
+                scrollToSection(currentIndex - 1);
+            }
+        }, 200); // Tambah debounce untuk mencegah double scroll
+    });
+
+    window.addEventListener("keydown", (event) => {
+        if (isScrolling) return;
+        if (event.key === "ArrowDown") {
+            scrollToSection(currentIndex + 1);
+        } else if (event.key === "ArrowUp") {
+            scrollToSection(currentIndex - 1);
         }
-
-        window.addEventListener("wheel", (event) => {
-          if (isScrolling) return;
-          if (event.deltaY > 0) {
-            scrollToSection(currentIndex + 1);
-          } else {
-            scrollToSection(currentIndex - 1);
-          }
-        });
-
-        window.addEventListener("keydown", (event) => {
-          if (isScrolling) return;
-          if (event.key === "ArrowDown") {
-            scrollToSection(currentIndex + 1);
-          } else if (event.key === "ArrowUp") {
-            scrollToSection(currentIndex - 1);
-          }
-        });
-      });
-    </script>
+    });
+});
   </body>
 </html>
