--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         </p>
       </div>
     </section>
+    <script>
     document.addEventListener("DOMContentLoaded", function () {
     const sections = document.querySelectorAll(".section");
     let currentIndex = 0;
@@ -114,5 +115,6 @@
         }
     });
 });
+      </script>
   </body>
 </html>
