--- a/index.html
+++ b/index.html
@@ -76,35 +76,31 @@
       </div>
     </section>
     <script>
-    document.addEventListener("DOMContentLoaded", function () {
+      document.addEventListener("DOMContentLoaded", function () {
     const sections = document.querySelectorAll(".section");
     let currentIndex = 0;
     let isScrolling = false;
-    
+
     function scrollToSection(index) {
-        if (index < 0 || index >= sections.length) return;
+        if (index < 0 || index >= sections.length || isScrolling) return;
         isScrolling = true;
         sections[index].scrollIntoView({
             behavior: "smooth",
-            block: "center"
+            block: "start"
         });
         currentIndex = index;
-        window.history.pushState(null, "", `#${sections[index].id}`);
-        setTimeout(() => isScrolling = false, 800);
+        setTimeout(() => isScrolling = false, 1000); // Pastikan cukup waktu sebelum scroll berikutnya
     }
 
-    let scrollTimeout;
     window.addEventListener("wheel", (event) => {
         if (isScrolling) return;
-        clearTimeout(scrollTimeout);
-        scrollTimeout = setTimeout(() => {
-            if (event.deltaY > 0) {
-                scrollToSection(currentIndex + 1);
-            } else {
-                scrollToSection(currentIndex - 1);
-            }
-        }, 200); // Tambah debounce untuk mencegah double scroll
-    });
+        event.preventDefault(); // Cegah scroll bawaan browser agar tidak double
+        if (event.deltaY > 0) {
+            scrollToSection(currentIndex + 1);
+        } else {
+            scrollToSection(currentIndex - 1);
+        }
+    }, { passive: false }); // Pastikan event.preventDefault() berfungsi
 
     window.addEventListener("keydown", (event) => {
         if (isScrolling) return;
@@ -115,6 +111,7 @@
         }
     });
 });
-      </script>
+
+    </script>
   </body>
 </html>
