--- a/index.html
+++ b/index.html
@@ -76,34 +76,44 @@
       </div>
     </section>
     <script>
-      document.addEventListener("DOMContentLoaded", function () {
+    document.addEventListener("DOMContentLoaded", function () {
     const sections = document.querySelectorAll(".section");
     let currentIndex = 0;
     let isScrolling = false;
+    let scrollTimeout;
 
     function scrollToSection(index) {
         if (index < 0 || index >= sections.length || isScrolling) return;
         isScrolling = true;
+        
         sections[index].scrollIntoView({
             behavior: "smooth",
             block: "start"
         });
-        currentIndex = index;
-        setTimeout(() => isScrolling = false, 800); 
+
+        clearTimeout(scrollTimeout);
+        scrollTimeout = setTimeout(() => {
+            isScrolling = false;
+            currentIndex = index;
+        }, 700); // Menunggu animasi selesai sebelum mengizinkan scroll lagi
     }
 
-    window.addEventListener("wheel", (event) => {
+    function handleScroll(event) {
         if (isScrolling) return;
         event.preventDefault();
+
         if (event.deltaY > 0) {
             scrollToSection(currentIndex + 1);
         } else {
             scrollToSection(currentIndex - 1);
         }
-    }, { passive: false }); 
+    }
+
+    window.addEventListener("wheel", handleScroll, { passive: false });
 
     window.addEventListener("keydown", (event) => {
         if (isScrolling) return;
+
         if (event.key === "ArrowDown") {
             scrollToSection(currentIndex + 1);
         } else if (event.key === "ArrowUp") {
@@ -111,7 +121,6 @@
         }
     });
 });
-
     </script>
   </body>
 </html>
